# EgTRQC

./: README.md  pyproject.toml
artifacts/dense_delay_analysis/: REPORT.md  curvature_norm_vs_time.html  dense_delay_summary.csv  dense_delay_timeseries.csv  entropy_vs_time.html  manifest.json  purity_vs_time.html  source_norm_vs_time.html  summary_metrics.html  trace_distance_vs_time.html
artifacts/notebooks/delay0/: proof_of_concept_delay0.ipynb
artifacts/notebooks/delay1/: Visualization_delay1.ipynb  proof_of_concept_delay1.ipynb
artifacts/notebooks/delay2-5/: Visualization_delay2_5.ipynb  proof_of_concept_delay2_5.ipynb
artifacts/reference_sweep/: delay_0.json  delay_1.json  delay_2.json  delay_5.json  manifest.json
artifacts/reference_sweep_vpy/: delay_0.json  delay_1.json  delay_2.json  delay_5.json  manifest.json
docs/: Makefile  reproducibility.md
docs/source/: api.rst  architecture.rst  cli.rst  conf.py  developer_guide.rst  index.rst  models.rst  overview.rst  reproducibility.rst  theory.rst  tutorials.rst  workflows.rst
scripts/: build_all.sh
src/egtrqc/: __init__.py  analysis.py  cli.py  config.py  delay.py  diagnostics.py  ensemble.py  geometry.py  io.py  model.py  octa_dense_model.py  octa_model.py  octa_product_model.py  quantum.py  simulator.py
tests/: test_delay_buffer.py  test_ensemble.py  test_octa_dense_model.py  test_octa_model.py  test_octa_product_model.py  test_simulator_audits.py
